# omm-Localfit-

./: .gitignore  README.md  database.rules.json  install.sh  pyproject.toml  requirements-train.txt
.github/workflows/: train.yml
docs/: prediction-model-status.md
docs/superpowers/plans/: 2026-07-20-cli-session-ux-update.md
docs/superpowers/specs/: 2026-07-19-cli-info-update-design.md  2026-07-21-install-auto-benchmark-calibrate-design.md  2026-07-21-quant-picker-predicted-best-design.md
scripts/: fetch_hf_candidates.py  model_quality_gate.py  test_firebase_rules.mjs  train_model.py
src/localfit_server/: app.py
src/omm/: benchmark.py  cli.py  config.py  downloader.py  featurize.py  gguf.py  hardware.py  hashutil.py  hub.py  linker.py  mltree.py  predictor.py  quality.py  registry.py  rules.py  search.py  telemetry.py
tests/: conftest.py  test_cli_autoremove.py  test_cli_calibrate_local.py  test_cli_contribute.py  test_cli_hardware_fit.py  test_cli_help_version.py  test_cli_install_confirm.py  test_cli_install_quant_picker.py  test_cli_recommend_escape.py  test_cli_relink.py  test_cli_remove.py  test_cli_search.py  test_cli_setting.py  test_cli_telemetry_config.py  test_cli_update.py  test_cli_upgrade.py  test_feature_parity.py  test_install_impl.py  test_model_quality_gate.py  test_predictor_artifact.py  test_predictor_change_note.py  test_quality.py  test_search.py  test_self_hosted_server.py  test_smoke.py  test_telemetry.py  test_training_data.py
