[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omm"
version = "0.1.0"
description = "Open source Model Manager - a package manager for local LLMs (GGUF)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "psutil>=5.9",
    "nvidia-ml-py>=12",
    "requests>=2.31",
    "questionary>=2.0",
]

[project.scripts]
omm = "omm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/omm"]
