[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omm"
version = "0.1.0"
description = "Open source Model Manager - a package manager for local LLMs (GGUF)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "psutil>=5.9",
    "requests>=2.31",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# NVIDIA VRAM detection (hardware.py._scan_nvidia_vram already lazy-imports
# pynvml behind a broad try/except, so it's safe to omit entirely on
# machines without an NVIDIA GPU - e.g. every Mac).
nvidia = ["nvidia-ml-py>=12"]

[project.scripts]
omm = "omm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/omm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
